--- a/Newproject.html.HTML
+++ b/Newproject.html.HTML
@@ -16,6 +16,7 @@
 <body>
 	<center>
 		<h1>Color Flipper</h1>
+		<h2>change</h2>
 	
 	<button id="random"class="border"onclick="randomColor()">Random</button>
 </center>
